title change in rmd and html

--- a/coord_polar/index.html
+++ b/coord_polar/index.html
@@ -56,7 +56,7 @@
 iframe {height: 420px; width: 620px}
 </style>
 
-<h2>Micropolar Extended Line Plot Example</h2>
+<h2>Cartesian and Polar Systems - micropolar linePlot</h2>
 
 <h3>Cartesian System</h3>
 
