--- a/coord_polar/index.html
+++ b/coord_polar/index.html
@@ -140,7 +140,7 @@ autoplot(managers[,1]) + coord_polar() +
 
 <p><img src="assets/fig/unnamed-chunk-3.png" alt="plot of chunk unnamed-chunk-3"> </p>
 
-<p>Until yesterday, getting an interactive <code>d3js</code> version required an inordinate amount of work.  Now we have <a href="http://micropolar.org"><code>micropolar</code></a> from Chris Viau.  <code>rCharts</code> author Ramnath Vaidyanathan quickly made <code>micropolar</code> accessible as detailed <a href="http://rcharts.io/howitworks/micropolar">here</a>.  Let&#39;s see how we can use it with our return data.  Unfortunately, the newest release broke the x labels, but I&#39;m sure we will get that worked out.</p>
+<p>Until yesterday, getting an interactive <code>d3js</code> version required an inordinate amount of work.  Now we have <a href="http://micropolar.org"><code>micropolar</code></a> from Chris Viau.  <code>rCharts</code> author Ramnath Vaidyanathan quickly made <code>micropolar</code> accessible as detailed <a href="http://rcharts.io/howitworks/micropolar">here</a>.  Let&#39;s see how we can use it with our return data.</p>
 
 <pre><code class="r">make_dataset = function(x, y, data = data){
   require(rCharts)
@@ -149,7 +149,7 @@ autoplot(managers[,1]) + coord_polar() +
 
 retData &lt;- data.frame(
   # 0 to nrow scaled to 360 since 360 deg in circle
-  0:(NROW(managers)-1) * 360/NROW(managers),
+  1:(NROW(managers)),#-1),# * 360/NROW(managers),
   # make numeric javascript date
   as.numeric(as.POSIXct(index(managers[,1])))*1000,
   format(index(managers),&quot;%b %Y&quot;),
@@ -167,14 +167,15 @@ retLine$set(
   type = &quot;linePlot&quot;,
   originTheta = 0,
   radialAxisTheta = 0,
-  #angularDomain = #retData$month,
-  #   paste0(
-  #    &quot;#!d3.time.format(&#39;%b %Y&#39;)(new Date(&quot;,
-  #    retData$date[c(seq(1,NROW(retData),6),NROW(retData))],
-  #   &quot;))!#&quot;),
+  angularDomain = #as.character(round(retData$x,2)),#retData$date[c(1,NROW(retData))],
+     paste0(
+      &quot;#!d3.time.format(&#39;%b %Y&#39;)(new Date(&quot;,
+      retData$date[c(seq(1,NROW(retData),6),NROW(retData))],
+     &quot;))!#&quot;),
+  hideFirstTick = FALSE,
   angularTicksSuffix = &#39;&#39;,
   tickOrientation = &quot;horizontal&quot;,
-  #minorTicks = 6,
+  minorTicks = 5,
   flip = TRUE,
   height = 400,
   width = 400
