add stacked version

--- a/nightingale/index.html
+++ b/nightingale/index.html
@@ -110,6 +110,17 @@ night.df &lt;- data.frame(
 colnames( night.df ) &lt;- c( &quot;number&quot;, &quot;date&quot;, &quot;rate&quot; )
 night.df$regime &lt;- c(rep(&#39;Before&#39;, 12), rep(&#39;After&#39;, 12))
 night.df$month &lt;- format(as.Date(Nightingale$Date), &quot;%b %Y&quot;)
+
+# For some graphs, it is more convenient to reshape death rates to long format
+# we will need in this format for the staced area micropolar chart
+require(reshape)
+Night&lt;- Nightingale[,c(1,8:10)]
+melted &lt;- melt(Night, &quot;Date&quot;)
+names(melted) &lt;- c(&quot;Date&quot;, &quot;Cause&quot;, &quot;Deaths&quot;)
+melted$Cause &lt;- sub(&quot;\\.rate&quot;, &quot;&quot;, melted$Cause)
+melted$Regime &lt;- ordered( rep(c(rep(&#39;Before&#39;, 12), rep(&#39;After&#39;, 12)), 3), levels=c(&#39;Before&#39;, &#39;After&#39;))
+Night &lt;- melted
+Night$Month &lt;- format(Night$Date, &quot;%b %Y&quot;)
 </code></pre>
 
 <h3>Interactive Charts</h3>
@@ -237,6 +248,188 @@ cat(nightPlot$html(chartId=&quot;chart2&quot;))
   )
 </script>
 
+<h5>Where is the Stack?</h5>
+
+<p>You might notice that we are missing the stacked area.  With micropolar version 0.1.1, we can now accomplish this also.</p>
+
+<div class="row">
+<div id = "chart3" class = "span4"></div>
+<div id = "chart4" class = "span4"></div>
+</div>
+
+<pre><code class="r">nightPlot &lt;- rCharts$new()
+nightPlot$setLib( path )
+nightPlot$templates$script = paste(getwd(),&quot;stackedArea.html&quot;,sep=&quot;/&quot;)
+nightPlot$set(
+  #remove [1:12] if you want Before and After to show on same plot
+  data = make_dataset( subset(Night, Regime == &quot;Before&quot;)[,c(&quot;Month&quot;,&quot;Deaths&quot;,&quot;Cause&quot;)] ),
+  radialDomain = c( 0, ceiling( max(night.df$rate) ) ),
+  angularDomain = 
+    night.df$month[1:12],
+  additionalAngularEndTick = F,
+  margin = 35,
+  originTheta = -90,
+  radialAxisTheta = -30,
+  type = &quot;StackedAreaChart&quot;,
+  minorTicks = 0,
+  radialTicksSuffix = &#39;&#39;,
+  height = 300,
+  width = 300
+)
+cat(nightPlot$html(chartId=&quot;chart3&quot;))
+</code></pre>
+
+<script>
+  var chartParamschart3 = {
+ "dom": "chart3",
+"width":    300,
+"height":    300,
+"data": [
+ [ "Apr 1854", "1.4", "Disease" ],
+[ "May 1854", "6.2", "Disease" ],
+[ "Jun 1854", "4.7", "Disease" ],
+[ "Jul 1854", "150", "Disease" ],
+[ "Aug 1854", "328.5", "Disease" ],
+[ "Sep 1854", "312.2", "Disease" ],
+[ "Oct 1854", "197", "Disease" ],
+[ "Nov 1854", "340.6", "Disease" ],
+[ "Dec 1854", "631.5", "Disease" ],
+[ "Jan 1855", "1022.8", "Disease" ],
+[ "Feb 1855", "822.8", "Disease" ],
+[ "Mar 1855", "480.3", "Disease" ],
+[ "Apr 1854", "0", "Wounds" ],
+[ "May 1854", "0", "Wounds" ],
+[ "Jun 1854", "0", "Wounds" ],
+[ "Jul 1854", "0", "Wounds" ],
+[ "Aug 1854", "0.4", "Wounds" ],
+[ "Sep 1854", "32.1", "Wounds" ],
+[ "Oct 1854", "51.7", "Wounds" ],
+[ "Nov 1854", "115.8", "Wounds" ],
+[ "Dec 1854", "41.7", "Wounds" ],
+[ "Jan 1855", "30.7", "Wounds" ],
+[ "Feb 1855", "16.3", "Wounds" ],
+[ "Mar 1855", "12.8", "Wounds" ],
+[ "Apr 1854", "7", "Other" ],
+[ "May 1854", "4.6", "Other" ],
+[ "Jun 1854", "2.5", "Other" ],
+[ "Jul 1854", "9.6", "Other" ],
+[ "Aug 1854", "11.9", "Other" ],
+[ "Sep 1854", "27.7", "Other" ],
+[ "Oct 1854", "50.1", "Other" ],
+[ "Nov 1854", "42.8", "Other" ],
+[ "Dec 1854", "48", "Other" ],
+[ "Jan 1855", "120", "Other" ],
+[ "Feb 1855", "140.1", "Other" ],
+[ "Mar 1855", "68.6", "Other" ] 
+],
+"radialDomain": [      0,   1174 ],
+"angularDomain": [ "Apr 1854", "May 1854", "Jun 1854", "Jul 1854", "Aug 1854", "Sep 1854", "Oct 1854", "Nov 1854", "Dec 1854", "Jan 1855", "Feb 1855", "Mar 1855" ],
+"additionalAngularEndTick": false,
+"margin":     35,
+"originTheta":    -90,
+"radialAxisTheta":    -30,
+"type": "StackedAreaChart",
+"minorTicks":      0,
+"radialTicksSuffix": "",
+"id": "chart3" 
+}
+  chartParamschart3.containerSelector = '#chart3'
+  
+  var polarPlot = micropolar[chartParamschart3.type]();
+  
+  chartParamschart3.geometry = polarPlot;
+  
+  var polarAxis = micropolar.Axis().config(chartParamschart3);
+  polarAxis();
+</script>
+
+<pre><code class="r">
+nightPlot &lt;- rCharts$new()
+nightPlot$setLib( path )
+nightPlot$templates$script = paste(getwd(),&quot;stackedArea.html&quot;,sep=&quot;/&quot;)
+nightPlot$set(
+  #remove [1:12] if you want Before and After to show on same plot
+  data = make_dataset( subset(Night, Regime == &quot;After&quot;)[,c(&quot;Month&quot;,&quot;Deaths&quot;,&quot;Cause&quot;)] ),
+  radialDomain = c( 0, ceiling( max(night.df$rate) ) ),
+  angularDomain = 
+    night.df$month[13:24],
+  additionalAngularEndTick = F,
+  margin = 35,
+  originTheta = -90,
+  radialAxisTheta= -30,
+  type = &quot;StackedAreaChart&quot;,
+  minorTicks = 0,
+  radialTicksSuffix = &#39;&#39;,
+  height = 300,
+  width = 300
+)
+cat(nightPlot$html(chartId=&quot;chart4&quot;))
+</code></pre>
+
+<script>
+  var chartParamschart4 = {
+ "dom": "chart4",
+"width":    300,
+"height":    300,
+"data": [
+ [ "Apr 1855", "177.5", "Disease" ],
+[ "May 1855", "171.8", "Disease" ],
+[ "Jun 1855", "247.6", "Disease" ],
+[ "Jul 1855", "107.5", "Disease" ],
+[ "Aug 1855", "129.9", "Disease" ],
+[ "Sep 1855", "47.5", "Disease" ],
+[ "Oct 1855", "32.8", "Disease" ],
+[ "Nov 1855", "56.4", "Disease" ],
+[ "Dec 1855", "25.3", "Disease" ],
+[ "Jan 1856", "11.4", "Disease" ],
+[ "Feb 1856", "6.6", "Disease" ],
+[ "Mar 1856", "3.9", "Disease" ],
+[ "Apr 1855", "17.9", "Wounds" ],
+[ "May 1855", "16.6", "Wounds" ],
+[ "Jun 1855", "64.5", "Wounds" ],
+[ "Jul 1855", "37.7", "Wounds" ],
+[ "Aug 1855", "44.1", "Wounds" ],
+[ "Sep 1855", "69.4", "Wounds" ],
+[ "Oct 1855", "13.6", "Wounds" ],
+[ "Nov 1855", "10.5", "Wounds" ],
+[ "Dec 1855", "5", "Wounds" ],
+[ "Jan 1856", "0.5", "Wounds" ],
+[ "Feb 1856", "0", "Wounds" ],
+[ "Mar 1856", "0", "Wounds" ],
+[ "Apr 1855", "21.2", "Other" ],
+[ "May 1855", "12.5", "Other" ],
+[ "Jun 1855", "9.6", "Other" ],
+[ "Jul 1855", "9.3", "Other" ],
+[ "Aug 1855", "6.7", "Other" ],
+[ "Sep 1855", "5", "Other" ],
+[ "Oct 1855", "4.6", "Other" ],
+[ "Nov 1855", "10.1", "Other" ],
+[ "Dec 1855", "7.8", "Other" ],
+[ "Jan 1856", "13", "Other" ],
+[ "Feb 1856", "5.2", "Other" ],
+[ "Mar 1856", "9.1", "Other" ] 
+],
+"radialDomain": [      0,   1174 ],
+"angularDomain": [ "Apr 1855", "May 1855", "Jun 1855", "Jul 1855", "Aug 1855", "Sep 1855", "Oct 1855", "Nov 1855", "Dec 1855", "Jan 1856", "Feb 1856", "Mar 1856" ],
+"additionalAngularEndTick": false,
+"margin":     35,
+"originTheta":    -90,
+"radialAxisTheta":    -30,
+"type": "StackedAreaChart",
+"minorTicks":      0,
+"radialTicksSuffix": "",
+"id": "chart4" 
+}
+  chartParamschart4.containerSelector = '#chart4'
+  
+  var polarPlot = micropolar[chartParamschart4.type]();
+  
+  chartParamschart4.geometry = polarPlot;
+  
+  var polarAxis = micropolar.Axis().config(chartParamschart4);
+  polarAxis();
+</script>
+
 <h3>Static Versions from Rdatasets Post</h3>
 
 <p>As a comparison, I just copied the code from <a href="http://cran.r-project.org/web/packages/HistData/HistData.pdf">the <code>HistData</code> documentation</a> which offered a couple static <code>ggplot2</code> and <code>base</code> plots of the Nightingale data.</p>
@@ -274,7 +467,7 @@ cxc1 + coord_polar(start=3*pi/2) +
     xlab(&quot;&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-41.png" alt="plot of chunk unnamed-chunk-4"> </p>
+<p><img src="assets/fig/unnamed-chunk-51.png" alt="plot of chunk unnamed-chunk-5"> </p>
 
 <pre><code class="r">
 # After plot
@@ -286,7 +479,7 @@ cxc2 + coord_polar(start=3*pi/2) +
     xlab(&quot;&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-42.png" alt="plot of chunk unnamed-chunk-4"> </p>
+<p><img src="assets/fig/unnamed-chunk-52.png" alt="plot of chunk unnamed-chunk-5"> </p>
 
 <pre><code class="r">
 # do both together, with faceting
@@ -299,7 +492,7 @@ cxc + coord_polar(start=3*pi/2) +
     xlab(&quot;&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-43.png" alt="plot of chunk unnamed-chunk-4"> </p>
+<p><img src="assets/fig/unnamed-chunk-53.png" alt="plot of chunk unnamed-chunk-5"> </p>
 
 <pre><code class="r">
 ## End(Not run)
@@ -328,7 +521,7 @@ legend(as.Date(&quot;1855/10/20&quot;), 700, c(&quot;Disease&quot;, &quot;Wounds
     col=colors, fill=colors, title=&quot;Cause&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-44.png" alt="plot of chunk unnamed-chunk-4"> </p>
+<p><img src="assets/fig/unnamed-chunk-54.png" alt="plot of chunk unnamed-chunk-5"> </p>
 
 <h3>Thanks</h3>
 
